===================
astroid's ChangeLog
===================

What's New in astroid 2.7.0?
============================
Release date: TBA



What's New in astroid 2.6.3?
============================
Release date: TBA

* Fix a crash when the node is a 'Module' in the brain builtin inference

  Closes PyCQA/pylint#4671

What's New in astroid 2.6.2?
============================
Release date: 2021-06-30

* Fix a crash when the inference of the length of a node failed

  Closes PyCQA/pylint#4633

* Fix unhandled StopIteration during inference, following the implementation
  of PEP479 in python 3.7+

  Closes PyCQA/pylint#4631
  Closes #1080

What's New in astroid 2.6.1?
============================
Release date: 2021-06-29

* Fix issue with ``TypedDict`` for Python 3.9+

  Closes PyCQA/pylint#4610


What's New in astroid 2.6.0?
============================
Release date: 2021-06-22

* Appveyor and travis are no longer used in the continuous integration

* ``setuptools_scm`` has been removed and replaced by ``tbump`` in order to not
  have hidden runtime dependencies to setuptools

* ``NodeNg``, the base node class, is now accessible from ``astroid`` or
  ``astroid.nodes`` as it can be used for typing.

* Update enum brain to improve inference of .name and .value dynamic class
  attributes

  Closes PyCQA/pylint#1932
  Closes PyCQA/pylint#2062
  Closes PyCQA/pylint#2306

* Removed ``Repr``, ``Exec``, and ``Print`` nodes as the ``ast`` nodes
  they represented have been removed with the change to Python 3

* Deprecate ``Ellipsis`` node. It will be removed with the next minor release.
  Checkers that already support Python 3.8+ work without issues. It's only
  necessary to remove all references to the ``astroid.Ellipsis`` node.
  This changes will make development of checkers easier as the resulting tree for Ellipsis
  will no longer depend on the python version. **Background**: With Python 3.8 the
  ``ast.Ellipsis`` node, along with ``ast.Str``, ``ast.Bytes``, ``ast.Num``,