@@ -1801,6 +1801,56 @@ class TypingBrain(unittest.TestCase):
             self.assertIsInstance(inferred, nodes.ClassDef)
             self.assertIsInstance(inferred.getattr("__iter__")[0], nodes.FunctionDef)
 
+    def test_typing_cast_uninferable(self):
+        """cast will yield instance of casted-to type if not otherwise inferable"""
+        node = builder.extract_node(
+            """
+        from typing import cast
+        class A:
+            pass
+
+        b = deserialize()
+        a = cast(A, b)
+        a
+        """
+        )
+        inferred = next(node.infer())
+        assert isinstance(inferred, bases.Instance)
+        assert inferred.name == "A"
+
+    def test_typing_cast_inferable(self):
+        """cast leaves type unchanged if it has been inferred"""
+        node = builder.extract_node(
+            """
+        from typing import cast
+        class A:
+            pass
+
+        b = list()
+        a = cast(A, b)
+        a
+        """
+        )
+        inferred = next(node.infer())
+        assert isinstance(inferred, bases.Instance)
+        assert inferred.name == "list"
+
+    def test_typing_cast_attribute(self):
+        node = builder.extract_node(
+            """
+        import typing
+        class A:
+            pass
+
+        b = deserialize()
+        a = typing.cast(A, b)
+        a
+        """
+        )
+        inferred = next(node.infer())
+        assert isinstance(inferred, bases.Instance)
+        assert inferred.name == "A"
+
 
 class ReBrainTest(unittest.TestCase):
     def test_regex_flags(self):
